diseño_grafico.html

--- a/templates/diseño_grafico.html
+++ b/templates/diseño_grafico.html
@@ -15,10 +15,11 @@
                     </div>
                     <div class="flyer">
                         <div class="flyer-img">
-                            <img src="/static/img/my portafolio/design_flyers/Flyer damas.jpg"  alt="">
+                            <img src="/static/img/my portafolio/design_flyers/Flyer damas.jpg" alt="">
                         </div>
                         <div class="flyer-img">
-                            <img src="/static/img/my portafolio/design_flyers/Flyer diseñamos tu logo para ig.jpg"  alt="">
+                            <img src="/static/img/my portafolio/design_flyers/Flyer diseñamos tu logo para ig.jpg"
+                                alt="">
                         </div>
                         <div class="flyer-img">
                             <img src="/static/img/my portafolio/design_flyers/flyer-esthefany.jpg" alt="">
@@ -29,43 +30,37 @@
                     </div>
                     <div class="flyer">
                         <div class="flyer-img ">
-                            <img src="/static/img/my portafolio/design_flyers/flyer-playa-colorada.jpg"  alt="">
+                            <img src="/static/img/my portafolio/design_flyers/flyer-playa-colorada.jpg" alt="">
                         </div>
                         <div class="flyer-img">
-                            <img src="/static/img/my portafolio/design_flyers/Flyer-trabajos.jpg"  alt="">
+                            <img src="/static/img/my portafolio/design_flyers/Flyer-trabajos.jpg" alt="">
                         </div>
                         <div class="flyer-img">
-                            <img src="/static/img/my portafolio/design_flyers/Flyer-windows.jpg"  alt="">
+                            <img src="/static/img/my portafolio/design_flyers/Flyer-windows.jpg" alt="">
                         </div>
                         <div class="flyer-img">
-                            <img src="/static/img/my portafolio/design_flyers/Menu Burguer.jpg"  alt="">
-                        </div>       
-                    </div>                 
+                            <img src="/static/img/my portafolio/design_flyers/Menu Burguer.jpg" alt="">
+                        </div>
+                    </div>
                 </div>
                 <div class="cont-logos">
                     <div class="logo-title">
-                        <h1>Logotipos</h1>
+                        <h1>Algunos Logos:</h1>
                     </div>
                     <div class="logo">
                         <div class="logo-img">
-                            <img src="/static/img/my portafolio/design_logos/compured.png"  alt="">
-                        </div>
-                        <div class="logo-img">
-                            <img src="/static/img/my portafolio/design_logos/logo3.png"  alt="">
-                        </div>
-                        <div class="logo-img">
-                            <img src="/static/img/my portafolio/design_logos/Logo-cr-design.png" alt="">
+                            <img src="/static/img/my portafolio/design_logos/compured.png" alt="">
                         </div>
                         <div class="logo-img">
                             <img src="/static/img/my portafolio/design_logos/Maria-Detallitos.png" alt="">
-                        </div>   
+                        </div>
                         <div class="logo-img">
                             <img src="/static/img/my portafolio/design_logos/logo_kati.png" alt="">
-                        </div>      
+                        </div>
                         <div class="logo-img">
                             <img src="/static/img/my portafolio/design_logos/Pasteleria Ana.png" alt="">
-                        </div>      
-                </div>                               
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="contenedor-portafolio-design-graphics">
@@ -96,25 +91,26 @@
                                         <label>Correo electronico</label>
                                         <input type="email" id="email" placeholder="Correo electronico">
                                     </ul>
-                                    <ul> 
+                                    <ul>
                                         <label>Numero de Telefono</label>
                                         <div class="select-box">
                                             <div class="selected-option">
-                                              <div>
-                                                <span><iconify-icon icon="flag:ve-4x3"></iconify-icon></span>
-                                                <strong>+58</strong>
-                                              </div>
-                                              <input type="tel" name="tel" placeholder="Numero de telefono" oninput="validarTelefono(event)">
+                                                <div>
+                                                    <span><iconify-icon icon="flag:ve-4x3"></iconify-icon></span>
+                                                    <strong>+58</strong>
+                                                </div>
+                                                <input type="tel" name="tel" placeholder="Numero de telefono"
+                                                    oninput="validarTelefono(event)">
                                             </div>
                                             <div class="options">
-                                              <input type="text" class="search-box" placeholder="Seleccione su Pais">
-                                              <ol>
-                                               
-                                              </ol>
-                                            </div>
-                                          </div>
+                                                <input type="text" class="search-box" placeholder="Seleccione su Pais">
+                                                <ol>
 
-                                    </ul>                  
+                                                </ol>
+                                            </div>
+                                        </div>
+
+                                    </ul>
                                     <div class="btn_1">
                                         <input type="submit" name="btn_1" id="btn_1">
                                     </div>
@@ -129,32 +125,32 @@
         </section>
     </main>
 
-  <!--Phone number-->
-  <script>
+    <!--Phone number-->
+    <script>
 
-    const countries = [
-        { name: "Argentina", code: "AR", phone: 54 },
-        { name: "Brazil", code: "BR", phone: 55 },
-        { name: "Chile", code: "CH", phone: 56 },
-        { name: "Bolivia", code: "BO", phone: 591 },
-        { name: "Ecuador", code: "EC", phone: 593 },
-        { name: "Paraguay", code: "PR", phone: 595 },
-        { name: "Peru", code: "PE", phone: 51 },
-        { name: "Colombia", code: "CO", phone: 57 },
-        { name: "Venezuela", code: "VE", phone: 58 },
-        { name: "Uruguay", code: "UY", phone: 598 },
-        { name: "Mexico", code: "ME", phone: 52 },
-        { name: "Guatemala", code: "GT", phone: 502 },
-    ],
+        const countries = [
+            { name: "Argentina", code: "AR", phone: 54 },
+            { name: "Brazil", code: "BR", phone: 55 },
+            { name: "Chile", code: "CH", phone: 56 },
+            { name: "Bolivia", code: "BO", phone: 591 },
+            { name: "Ecuador", code: "EC", phone: 593 },
+            { name: "Paraguay", code: "PR", phone: 595 },
+            { name: "Peru", code: "PE", phone: 51 },
+            { name: "Colombia", code: "CO", phone: 57 },
+            { name: "Venezuela", code: "VE", phone: 58 },
+            { name: "Uruguay", code: "UY", phone: 598 },
+            { name: "Mexico", code: "ME", phone: 52 },
+            { name: "Guatemala", code: "GT", phone: 502 },
+        ],
 
-        select_box = document.querySelector('.options'),
-        search_box = document.querySelector('.search-box'),
-        input_box = document.querySelector('input[type="tel"]'),
-        selected_option = document.querySelector('.selected-option div');
+            select_box = document.querySelector('.options'),
+            search_box = document.querySelector('.search-box'),
+            input_box = document.querySelector('input[type="tel"]'),
+            selected_option = document.querySelector('.selected-option div');
 
-    let options = null;
-    for (country of countries) {
-        const option = ` 
+        let options = null;
+        for (country of countries) {
+            const option = ` 
         <li class="option">
           <div>
              <span class="iconify"><iconify-icon icon="flag:${country.code.toLowerCase()}-4x3"></iconify-icon></span>
@@ -163,63 +159,63 @@
           <span class="phone-number" readonly>+${country.phone}</span>
       </li> `;
 
-        select_box.querySelector('ol').insertAdjacentHTML('beforeend', option);
-        options = document.querySelectorAll('.option');
-    }
-
-    function selectOption() {
-        console.log(this)
-        const icon = this.querySelector('.iconify').cloneNode(true),
-            phone_code = this.querySelector('.phone-number').cloneNode(true);
-
-        selected_option.innerHTML = '';
-        selected_option.append(icon, phone_code);
-
-        input_box.value = phone_code.innerText;
-
-        select_box.classList.remove('active');
-        selected_option.classList.remove('active');
-
-        search_box.value = '';
-        select_box.querySelectorAll('hide').forEach(el => el.classList.remove('hide'));
-
-    }
-
-    function searchCountry() {
-        let search_query = search_box.value.toLowerCase();
-        for (option of options) {
-            let is_matched = option.querySelector('.country-name').innerText.toLowerCase().includes(search_query);
-            option.classList.toggle('hide', !is_matched)
+            select_box.querySelector('ol').insertAdjacentHTML('beforeend', option);
+            options = document.querySelectorAll('.option');
         }
-    }
 
-    selected_option.addEventListener('click', () => {
-        select_box.classList.toggle('active');
-        selected_option.classList.toggle('active');
+        function selectOption() {
+            console.log(this)
+            const icon = this.querySelector('.iconify').cloneNode(true),
+                phone_code = this.querySelector('.phone-number').cloneNode(true);
 
-    })
+            selected_option.innerHTML = '';
+            selected_option.append(icon, phone_code);
 
-    options.forEach(option => option.addEventListener('click', selectOption));
-    search_box.addEventListener('input', searchCountry);
+            input_box.value = phone_code.innerText;
 
-</script>
+            select_box.classList.remove('active');
+            selected_option.classList.remove('active');
 
-<!--Script validar telefono-->
+            search_box.value = '';
+            select_box.querySelectorAll('hide').forEach(el => el.classList.remove('hide'));
 
-<script>
-    function validarTelefono(event) {
-        // Obtener el valor actual del campo de entrada
-        let inputValue = event.target.value;
+        }
 
-        // Reemplazar cualquier carácter que no sea un número o el signo '+' con una cadena vacía
-        let validValue = inputValue.replace(/[^0-9+]/g, '');
+        function searchCountry() {
+            let search_query = search_box.value.toLowerCase();
+            for (option of options) {
+                let is_matched = option.querySelector('.country-name').innerText.toLowerCase().includes(search_query);
+                option.classList.toggle('hide', !is_matched)
+            }
+        }
 
-        // Actualizar el valor del campo de entrada con la entrada válida
-        event.target.value = validValue;
-    }
-</script>
+        selected_option.addEventListener('click', () => {
+            select_box.classList.toggle('active');
+            selected_option.classList.toggle('active');
 
-   
+        })
+
+        options.forEach(option => option.addEventListener('click', selectOption));
+        search_box.addEventListener('input', searchCountry);
+
+    </script>
+
+    <!--Script validar telefono-->
+
+    <script>
+        function validarTelefono(event) {
+            // Obtener el valor actual del campo de entrada
+            let inputValue = event.target.value;
+
+            // Reemplazar cualquier carácter que no sea un número o el signo '+' con una cadena vacía
+            let validValue = inputValue.replace(/[^0-9+]/g, '');
+
+            // Actualizar el valor del campo de entrada con la entrada válida
+            event.target.value = validValue;
+        }
+    </script>
+
+
 </body>
 
 {%endblock%}
