--- a/templates/programacion.html
+++ b/templates/programacion.html
@@ -7,7 +7,6 @@
 <body class="body-programing">
     <main>
         <section>
-            <!-- 
 
             <div class="contenedor-portafolio-web">
                 <div class="portafolio-title">
@@ -20,7 +19,7 @@
                         </div>
                         <div class="web-text">
                             <h1>Pagina web Universidad</h1>
-
+                            <a href="https://andreslhr.github.io/restaurante/" target="_blank">Visitar Demo</a>
                         </div>
                     </div>
                     <div class="cont-web-title">
@@ -29,7 +28,7 @@
                         </div>
                         <div class="web-text">
                             <h1>Pagina web restaurant</h1>
-
+                            <a href="https://andreslhr.github.io/restaurante/" target="_blank">Visitar Demo</a>
                         </div>
                     </div>
                     <div class="cont-web-title">
@@ -38,13 +37,12 @@
                         </div>
                         <div class="web-text">
                             <h1>Pagina web tienda Ecommerce</h1>
+                            <a href="https://andreslhr.github.io/restaurante/" target="_blank">Visitar Demo</a>
                         </div>
                     </div>
                 </div>
             </div>
 
-
-            -->
 
             <div class="contenedor-services-programing">
                 <div class="cont-programing">
