--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100&family=Open+Sans:wght@300;400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&family=Open+Sans:wght@300;400;500;600;700&display=swap');
 
 
 * {
@@ -180,7 +180,7 @@ body {
     top: 100px;
 
     @media (max-width:1000px) {
-       right: 2px;
+        right: 2px;
     }
 }
 
@@ -394,11 +394,11 @@ body {
 }
 
 .nav-container nav a {
+    font-weight: 100;
     padding: 1.2rem 1rem;
-    font-size: 10px;
+    font-size: 13px;
     text-decoration: none;
     color: #fff;
-    font-weight: bold;
     letter-spacing: 2px;
     display: block;
     border-radius: 25px;
@@ -1892,9 +1892,29 @@ input[type="tel"] {
     height: 100%;
 }
 
+.cont-web-title .web-text {
+    padding: 10px 0;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
 .cont-web-title .web-text h1 {
+    font-weight: 00;
     font-size: 15px;
     color: #383838;
+}
+
+.cont-web-title .web-text a {
+    font-size: 13px;
+    width: 130px;
+    text-decoration: none;
+    padding: 7px;
+    text-align: center;
+    background-color: #011e2f;
+    color: #fff;
+    border-radius: 10px;
 }
 
 .contenedor-services-programing {
@@ -2479,7 +2499,7 @@ Fcont .ia-download-video li i {
 .logo {
     display: flex;
     align-items: center;
-    gap: 4rem;
+    gap: 2rem;
     flex-wrap: wrap;
     margin-bottom: 2rem;
     justify-content: center;
